; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wifi_provisioning/src/extr_manager.c_wifi_prov_mgr_wifi_scan_finished.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wifi_provisioning/src/extr_manager.c_wifi_prov_mgr_wifi_scan_finished.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@prov_ctx_lock = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Provisioning manager not initialized\00", align 1
@prov_ctx = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wifi_prov_mgr_wifi_scan_finished() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 1, i32* %2, align 4
  %3 = load i32, i32* @prov_ctx_lock, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %9, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @TAG, align 4
  %7 = call i32 @ESP_LOGE(i32 %6, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* %2, align 4
  store i32 %8, i32* %1, align 4
  br label %30

9:                                                ; preds = %0
  %10 = load i32, i32* @prov_ctx_lock, align 4
  %11 = call i32 @ACQUIRE_LOCK(i32 %10)
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @prov_ctx, align 8
  %13 = icmp ne %struct.TYPE_2__* %12, null
  br i1 %13, label %20, label %14

14:                                               ; preds = %9
  %15 = load i32, i32* @TAG, align 4
  %16 = call i32 @ESP_LOGE(i32 %15, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %17 = load i32, i32* @prov_ctx_lock, align 4
  %18 = call i32 @RELEASE_LOCK(i32 %17)
  %19 = load i32, i32* %2, align 4
  store i32 %19, i32* %1, align 4
  br label %30

20:                                               ; preds = %9
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @prov_ctx, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  %25 = xor i1 %24, true
  %26 = zext i1 %25 to i32
  store i32 %26, i32* %2, align 4
  %27 = load i32, i32* @prov_ctx_lock, align 4
  %28 = call i32 @RELEASE_LOCK(i32 %27)
  %29 = load i32, i32* %2, align 4
  store i32 %29, i32* %1, align 4
  br label %30

30:                                               ; preds = %20, %14, %5
  %31 = load i32, i32* %1, align 4
  ret i32 %31
}

declare dso_local i32 @ESP_LOGE(i32, i8*) #1

declare dso_local i32 @ACQUIRE_LOCK(i32) #1

declare dso_local i32 @RELEASE_LOCK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
